@@ -1,12 +1,8 @@
 package it.gov.pagopa.fdr.service.psps;
 
 import static io.opentelemetry.api.trace.SpanKind.SERVER;
-import static it.gov.pagopa.fdr.util.AppConstant.FLOW_NAME;
-import static it.gov.pagopa.fdr.util.AppConstant.INDEXES;
-import static it.gov.pagopa.fdr.util.AppConstant.PSP_ID;
 
 import io.opentelemetry.instrumentation.annotations.WithSpan;
-import io.quarkus.panache.common.Parameters;
 import it.gov.pagopa.fdr.exception.AppErrorCodeMessageEnum;
 import it.gov.pagopa.fdr.exception.AppException;
 import it.gov.pagopa.fdr.repository.fdr.FdrHistoryEntity;
@@ -48,10 +44,7 @@ public class PspsService {
 
     // TODO rivedere index  con fdr+psp
     Optional<FdrInsertEntity> byReportingFlowName =
-        FdrInsertEntity.find(
-                "reporting_flow_name = :flowName and sender.psp_id = :pspId",
-                Parameters.with(FLOW_NAME, reportingFlowName).and(PSP_ID, pspId).map())
-            .firstResultOptional();
+        FdrInsertEntity.findByFlowNameAndPspId(reportingFlowName, pspId).firstResultOptional();
 
     if (byReportingFlowName.isPresent()) {
       throw new AppException(
@@ -61,9 +54,7 @@ public class PspsService {
     }
 
     Optional<FdrPublishRevisionProjection> fdrPublishedByReportingFlowName =
-        FdrPublishEntity.find(
-                "reporting_flow_name = :flowName and sender.psp_id = :pspId",
-                Parameters.with(FLOW_NAME, reportingFlowName).and(PSP_ID, pspId).map())
+        FdrPublishEntity.findByFlowNameAndPspId(reportingFlowName, pspId)
             .project(FdrPublishRevisionProjection.class)
             .firstResultOptional();
 
@@ -88,9 +79,7 @@ public class PspsService {
     Instant now = Instant.now();
 
     FdrInsertEntity reportingFlowEntity =
-        FdrInsertEntity.find(
-                "reporting_flow_name = :flowName and sender.psp_id = :pspId",
-                Parameters.with(FLOW_NAME, reportingFlowName).and(PSP_ID, pspId).map())
+        FdrInsertEntity.findByFlowNameAndPspId(reportingFlowName, pspId)
             .project(FdrInsertEntity.class)
             .firstResultOptional()
             .orElseThrow(
@@ -107,9 +96,7 @@ public class PspsService {
     }
 
     List<FdrPaymentInsertEntity> paymentIndexAlreadyExist =
-        FdrPaymentInsertEntity.find(
-                "ref_fdr_reporting_flow_name = :flowName and index in :indexes",
-                Parameters.with(FLOW_NAME, reportingFlowName).and(INDEXES, indexList).map())
+        FdrPaymentInsertEntity.findByFlowNameAndIndexes(reportingFlowName, indexList)
             .project(FdrPaymentInsertEntity.class)
             .list();
 
@@ -130,7 +117,7 @@ public class PspsService {
     reportingFlowEntity.setStatus(ReportingFlowStatusEnumEntity.INSERTED);
     reportingFlowEntity.update();
 
-    FdrPaymentInsertEntity.persist(
+    FdrPaymentInsertEntity.persistFdrPaymentsInsert(
         reportingFlowPaymentEntities.stream()
             .map(
                 reportingFlowPaymentEntity -> {
@@ -143,7 +130,7 @@ public class PspsService {
                       reportingFlowEntity.getSender().getPspId());
                   return reportingFlowPaymentEntity;
                 })
-            .collect(Collectors.toList()));
+            .toList());
   }
 
   @WithSpan(kind = SERVER)
@@ -153,9 +140,7 @@ public class PspsService {
     Instant now = Instant.now();
 
     FdrInsertEntity reportingFlowEntity =
-        FdrInsertEntity.find(
-                "reporting_flow_name = :flowName and sender.psp_id = :pspId",
-                Parameters.with(FLOW_NAME, reportingFlowName).and(PSP_ID, pspId).map())
+        FdrInsertEntity.findByFlowNameAndPspId(reportingFlowName, pspId)
             .project(FdrInsertEntity.class)
             .firstResultOptional()
             .orElseThrow(
@@ -179,9 +164,7 @@ public class PspsService {
     }
 
     List<FdrPaymentInsertEntity> paymentToDelete =
-        FdrPaymentInsertEntity.find(
-                "ref_fdr_reporting_flow_name = :flowName and index in :indexes",
-                Parameters.with(FLOW_NAME, reportingFlowName).and(INDEXES, indexList).map())
+        FdrPaymentInsertEntity.findByFlowNameAndIndexes(reportingFlowName, indexList)
             .project(FdrPaymentInsertEntity.class)
             .list();
     if (!paymentToDelete.stream()
@@ -192,9 +175,7 @@ public class PspsService {
           AppErrorCodeMessageEnum.REPORTING_FLOW_PAYMENT_NO_MATCH_INDEX, reportingFlowName);
     }
 
-    FdrPaymentInsertEntity.delete(
-        "ref_fdr_reporting_flow_name = :flowName and index in :indexes",
-        Parameters.with(FLOW_NAME, reportingFlowName).and(INDEXES, indexList).map());
+    FdrPaymentInsertEntity.deleteByFlowNameAndIndexes(reportingFlowName, indexList);
 
     reportingFlowEntity.setTotPayments(deleteAndSumCount(reportingFlowEntity, paymentToDelete));
     reportingFlowEntity.setSumPayments(deleteAndSubtract(reportingFlowEntity, paymentToDelete));
@@ -212,9 +193,7 @@ public class PspsService {
     Instant now = Instant.now();
 
     FdrInsertEntity reportingFlowEntity =
-        FdrInsertEntity.find(
-                "reporting_flow_name = :flowName and sender.psp_id = :pspId",
-                Parameters.with(FLOW_NAME, reportingFlowName).and(PSP_ID, pspId).map())
+        FdrInsertEntity.findByFlowNameAndPspId(reportingFlowName, pspId)
             .project(FdrInsertEntity.class)
             .firstResultOptional()
             .orElseThrow(
@@ -233,40 +212,31 @@ public class PspsService {
     reportingFlowEntity.setStatus(ReportingFlowStatusEnumEntity.PUBLISHED);
 
     List<FdrPaymentInsertEntity> paymentInsertEntities =
-        FdrPaymentInsertEntity.find(
-                "ref_fdr_reporting_flow_name = :flowName and ref_fdr_reporting_sender_psp_id ="
-                    + " :pspId",
-                Parameters.with(FLOW_NAME, reportingFlowName).and(PSP_ID, pspId).map())
+        FdrPaymentInsertEntity.findByFlowNameAndPspId(reportingFlowName, pspId)
             .project(FdrPaymentInsertEntity.class)
             .list();
 
     if (reportingFlowEntity.getRevision() > 1L) {
-      FdrPublishEntity.delete(
-          "reporting_flow_name = :flowName and sender.psp_id = :pspId",
-          Parameters.with(FLOW_NAME, reportingFlowName).and(PSP_ID, pspId).map());
-      FdrPaymentPublishEntity.delete(
-          "ref_fdr_reporting_flow_name = :flowName and ref_fdr_reporting_sender_psp_id = :pspId",
-          Parameters.with(FLOW_NAME, reportingFlowName).and(PSP_ID, pspId).map());
+      FdrPublishEntity.deleteByFlowNameAndPspId(reportingFlowName, pspId);
+      FdrPaymentPublishEntity.deleteByFlowNameAndPspId(reportingFlowName, pspId);
     }
 
     FdrPublishEntity fdrPublishEntity = mapper.toFdrPublishEntity(reportingFlowEntity);
     fdrPublishEntity.setInternalNdpRead(Boolean.FALSE);
     fdrPublishEntity.setRead(Boolean.FALSE);
-    fdrPublishEntity.persist();
+    fdrPublishEntity.persistEntity();
     List<FdrPaymentPublishEntity> fdrPaymentPublishEntities =
         mapper.toFdrPaymentPublishEntityList(paymentInsertEntities);
-    FdrPaymentPublishEntity.persist(fdrPaymentPublishEntities);
+    FdrPaymentPublishEntity.persistFdrPaymentPublishEntities(fdrPaymentPublishEntities);
 
     FdrHistoryEntity fdrHistoryEntity = mapper.toFdrHistoryEntity(reportingFlowEntity);
     fdrHistoryEntity.persist();
     List<FdrPaymentHistoryEntity> fdrPaymentHistoryEntities =
         mapper.toFdrPaymentHistoryEntityList(paymentInsertEntities);
-    FdrPaymentHistoryEntity.persist(fdrPaymentHistoryEntities);
+    FdrPaymentHistoryEntity.persistFdrPaymentHistoryEntities(fdrPaymentHistoryEntities);
 
     reportingFlowEntity.delete();
-    FdrPaymentInsertEntity.delete(
-        "ref_fdr_reporting_flow_name = :flowName and ref_fdr_reporting_sender_psp_id = :pspId",
-        Parameters.with(FLOW_NAME, reportingFlowName).and(PSP_ID, pspId).map());
+    FdrPaymentInsertEntity.deleteByFlowNameAndPspId(reportingFlowName, pspId);
   }
 
   @WithSpan(kind = SERVER)
@@ -274,9 +244,7 @@ public class PspsService {
     log.debugf("Delete reporting flow");
 
     FdrInsertEntity reportingFlowEntity =
-        FdrInsertEntity.find(
-                "reporting_flow_name = :flowName and sender.psp_id = :pspId",
-                Parameters.with(FLOW_NAME, reportingFlowName).and(PSP_ID, pspId).map())
+        FdrInsertEntity.findByFlowNameAndPspId(reportingFlowName, pspId)
             .project(FdrInsertEntity.class)
             .firstResultOptional()
             .orElseThrow(
@@ -285,9 +253,7 @@ public class PspsService {
                         AppErrorCodeMessageEnum.REPORTING_FLOW_NOT_FOUND, reportingFlowName));
 
     if (reportingFlowEntity.getTotPayments() > 0L) {
-      FdrPaymentInsertEntity.delete(
-          "ref_fdr_reporting_flow_name = :flowName",
-          Parameters.with(FLOW_NAME, reportingFlowName).map());
+      FdrPaymentInsertEntity.deleteByFlowName(reportingFlowName);
     }
     reportingFlowEntity.delete();
   }
